# sdd-ns-guardian

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/skills/ns-guardian-conventions/: SKILL.md
features/: us-1-basic-quota-check.md  us-2-limitrange-networkpolicy.md  us-3-filter-system-namespaces.md  us-4-output-formats.md  us-5-exit-codes.md  us-6-prometheus-rule.md
src/ns_guardian/: __init__.py  filters.py  k8s_client.py  main.py  mock.py  models.py  output.py  prometheus.py
tests/: test_check.py  test_prometheus.py
vibe-coding/: problems.md  prompt.md  raw-output.py
